--- a/src/main/webapp/reportLab/report_lab_by_collection_centre_investigation_count.xhtml
+++ b/src/main/webapp/reportLab/report_lab_by_collection_centre_investigation_count.xhtml
@@ -11,115 +11,91 @@
 
     <ui:define name="content">
         <h:outputStylesheet library="css" name="printing.css"></h:outputStylesheet>
-        <h:form>
-
-            <p:panel>
-                <f:facet name="header" >
-                    <p:outputLabel value="Collecting Centre Collection Count Report" />
-                </f:facet>
-                <h:panelGrid columns="2">
-                    <h:outputLabel value="From Date"/>
-                    <p:calendar id="frmDate" value="#{investigationMonthSummeryOwnController.fromDate}" navigator="true"  pattern="dd MMMM yyyy HH:mm:ss" >
-                    </p:calendar>
-
-                    <h:outputLabel value="To Date"/>
-                    <p:calendar id="toDate" value="#{investigationMonthSummeryOwnController.toDate}" navigator="true" pattern="dd MMMM yyyy HH:mm:ss" >
-                    </p:calendar>
-                    <h:outputLabel value="Collecting Center"/>
-                    <p:autoComplete forceSelection="true" value="#{investigationMonthSummeryOwnController.creditCompany}" completeMethod="#{collectingCentreController.completeCollecting}" var="ix" itemLabel="#{ix.name}" itemValue="#{ix}" size="30"  style="width: 400px;">
-                        <p:column>
-                            #{ix.name}
-                        </p:column>
-                        <p:column>
-                            #{ix.institutionCode}
-                        </p:column>
-                    </p:autoComplete>
-
-                </h:panelGrid>
-                <h:panelGrid columns="4">
-                    <p:spacer height="1" width="110"/>
-                    <p:commandButton ajax="false" value="Process" action="#{investigationMonthSummeryOwnController.createItemNewChanges()}" ></p:commandButton>
-
-                    <p:commandButton ajax="false" value="Print"  styleClass="noPrintButton" style="float: right;" >
-                        <p:printer target="panelPrint" />
-                    </p:commandButton>
-                    <p:commandButton ajax="false" value="Excel"  styleClass="noPrintButton" style="float: right;" >
-                        <p:dataExporter type="xls" target="tbl"  fileName="Collecting_Centre_Sale_Report_byItem" />
-                    </p:commandButton>
-                </h:panelGrid>
-
-            </p:panel>
-            <p:panel id="panelPrint"  styleClass="noBorder summeryBorder">
-                <p:dataTable id="tbl" value="#{investigationMonthSummeryOwnController.itemsLab}" var="c" rowIndexVar="i" >
-                    <f:facet name="header">
-                        <h:outputLabel value="Collecting Centre Collection Count Report"/>
-                        <br></br>
-                        <h:panelGrid rendered="#{investigationMonthSummeryOwnController.creditCompany ne null}">
-                            <h:outputLabel value="#{investigationMonthSummeryOwnController.creditCompany.name}"/>
-                        </h:panelGrid>
-                        <h:outputLabel value="From "/>
-                        <h:outputLabel value="#{investigationMonthSummeryOwnController.fromDate}">
-                            <f:convertDateTime pattern="yyyy MMMM dd hh:mm:ss a" />
-                        </h:outputLabel>
-                        <h:outputLabel value="- To "/>
-                        <h:outputLabel value="#{investigationMonthSummeryOwnController.toDate}">
-                            <f:convertDateTime pattern="yyyy MMMM dd hh:mm:ss a" />
-                        </h:outputLabel>
+        <h:panelGroup rendered="true" >
+            <h:form>
+                <p:panel>
+                    <f:facet name="header" >
+                        <p:outputLabel value="Collecting Centre Collection Count Report" />
                     </f:facet>
-                    <p:column headerText="No" style="text-align: center">
-                        <f:facet name="header">
-                            <h:outputLabel value="No"/>
-                        </f:facet>
-                        <h:outputLabel value="#{i+1}" />
-                    </p:column>
-                    <p:column headerText="Test Name"
-                              sortBy="#{c.investigation.name}">
-                        <f:facet name="header">
-                            <h:outputLabel value="Test Name"/>
-                        </f:facet>
-                        <h:outputLabel value="#{c.investigation.name}"  />
-                    </p:column>
-                    <p:column headerText="Count" style="text-align: center" sortBy="#{c.count}">
-                        <f:facet name="header">
-                            <h:outputLabel value="Count"/>
-                        </f:facet>
-                        <h:outputLabel value="#{c.count}" >
-                            <f:convertNumber pattern="#,##0" />
-                        </h:outputLabel>
-                    </p:column>
-                    <p:column headerText="Total Value" style="text-align: right;" sortBy="#{c.count}">
-                        <f:facet name="header">
-                            <h:outputLabel value="Total Value"/>
-                        </f:facet>
-                        <h:outputLabel value="#{c.total}" >
-                            <f:convertNumber pattern="#,##0.00" />
-                        </h:outputLabel>
-                    </p:column>
-                    <p:columnGroup type="footer">  
-                        <p:row>                              
-                            <p:column footerText="Total" colspan="2" style="text-align:left"/>
-                            <p:column footerText="#{investigationMonthSummeryOwnController.countTotal2}" >
-                                <f:facet name="footer">
-                                    <h:outputLabel value="#{investigationMonthSummeryOwnController.countTotal2}">
-                                        <f:convertNumber pattern="#,##0" />
-                                    </h:outputLabel>
-                                </f:facet>
+                    <h:panelGrid columns="2">
+                        <h:outputLabel value="From Date"/>
+                        <p:calendar id="frmDate" value="#{investigationMonthSummeryOwnControllerSession.fromDate}" navigator="true"  pattern="dd MMMM yyyy HH:mm:ss" >
+                        </p:calendar>
+
+                        <h:outputLabel value="To Date"/>
+                        <p:calendar id="toDate" value="#{investigationMonthSummeryOwnControllerSession.toDate}" navigator="true" pattern="dd MMMM yyyy HH:mm:ss" >
+                        </p:calendar>
+                        <h:outputLabel value="Collecting Center"/>
+                        <p:autoComplete forceSelection="true" value="#{investigationMonthSummeryOwnControllerSession.creditCompany}" completeMethod="#{collectingCentreController.completeCollecting}" var="ix" itemLabel="#{ix.name}" itemValue="#{ix}" size="30"  style="width: 400px;">
+                            <p:column>
+                                #{ix.name}
                             </p:column>
-                            <p:column footerText="#{investigationMonthSummeryOwnController.itemValue}"  >
-                                <f:facet name="footer">
-                                    <h:outputLabel value="#{investigationMonthSummeryOwnController.itemValue}" style="float: right;">
-                                        <f:convertNumber pattern="#,##0.00" />
-                                    </h:outputLabel>
-                                </f:facet>
-                            </p:column> 
-                        </p:row>  
-                    </p:columnGroup> 
+                            <p:column>
+                                #{ix.institutionCode}
+                            </p:column>
+                        </p:autoComplete>
 
-                </p:dataTable>
-            </p:panel>   
+                    </h:panelGrid>
+                    <h:panelGrid columns="4">
+                        <p:spacer height="1" width="110"/>
+                        <p:commandButton ajax="false" value="Process" action="#{investigationMonthSummeryOwnControllerSession.createItemNewChanges()}" ></p:commandButton>
 
-        </h:form>
+                        <p:commandButton ajax="false" value="Print"  styleClass="noPrintButton" style="float: right;" >
+                            <p:printer target="panelPrint" />
+                        </p:commandButton>
+                        <p:commandButton ajax="false" value="Excel"  styleClass="noPrintButton" style="float: right;" >
+                            <p:dataExporter type="xls" target="tbl"  fileName="Collecting_Centre_Sale_Report_byItem" />
+                        </p:commandButton>
+                    </h:panelGrid>
 
+                </p:panel>
+                <p:panel id="panelPrint"  styleClass="noBorder summeryBorder">
+                    <p:dataTable id="tbl" value="#{investigationMonthSummeryOwnControllerSession.itemsLab}" var="c" rowIndexVar="i" >
+
+                        <p:column headerText="No" style="text-align: center">
+                            <f:facet name="header">
+                                <h:outputLabel value="No"/>
+                            </f:facet>
+                            <h:outputLabel value="#{i+1}" />
+                        </p:column>
+                        <p:column headerText="Test Name"
+                                  sortBy="#{c.investigation.name}">
+                            <f:facet name="header">
+                                <h:outputLabel value="Test Name"/>
+                            </f:facet>
+                            <h:outputLabel value="#{c.investigation.name}"  />
+                        </p:column>
+                        <p:column headerText="Count" style="text-align: center" sortBy="#{c.count}">
+                            <f:facet name="header">
+                                <h:outputLabel value="Count"/>
+                            </f:facet>
+                            <h:outputLabel value="#{c.count}" >
+                                <f:convertNumber pattern="#,##0" />
+                            </h:outputLabel>
+                            <f:facet name="footer">
+                                <h:outputLabel value="#{investigationMonthSummeryOwnControllerSession.countTotal2}">
+                                    <f:convertNumber pattern="#,##0" />
+                                </h:outputLabel>
+                            </f:facet>
+                        </p:column>
+                        <p:column headerText="Total Value" style="text-align: right;" sortBy="#{c.total}">
+                            <f:facet name="header">
+                                <h:outputLabel value="Total Value"/>
+                            </f:facet>
+                            <h:outputLabel value="#{c.total}" >
+                                <f:convertNumber pattern="#,##0.00" />
+                            </h:outputLabel>
+                            <f:facet name="footer">
+                                <h:outputLabel value="#{investigationMonthSummeryOwnControllerSession.itemValue}" style="float: right;">
+                                    <f:convertNumber pattern="#,##0.00" />
+                                </h:outputLabel>
+                            </f:facet>
+                        </p:column>
+                    </p:dataTable>
+                </p:panel>  
+            </h:form>
+        </h:panelGroup>
     </ui:define>
 
 </ui:composition>
+
