--- a/src/main/webapp/inward/inward_reports.xhtml
+++ b/src/main/webapp/inward/inward_reports.xhtml
@@ -103,7 +103,7 @@
                                 </h:panelGrid>
                             </p:panel>
                             <p:panel header="(6)Surgery Reports" style="width: 400px;margin: auto;" collapsed="true" toggleable="true">
-                            <p:commandButton value="Surgery Details" action="inward_search_surgery_1" actionListener="#{searchController.makeNull()}" styleClass="linkButton" ajax="false" />
+                                <p:commandButton value="Surgery Details" action="inward_search_surgery_1" actionListener="#{searchController.makeNull()}" styleClass="linkButton" ajax="false" rendered="false" />
                         </p:panel>
                             <p:panel header="(9)Inward Payment" style="width: 400px;margin: auto;" collapsed="true" toggleable="true">
                             <h:panelGrid columns="1">
