--- a/src/main/webapp/reportCashier/report_cashier_summery_all_by_reciptno.xhtml
+++ b/src/main/webapp/reportCashier/report_cashier_summery_all_by_reciptno.xhtml
@@ -47,10 +47,10 @@
                     </f:facet>
                     <h:panelGrid columns="5"  styleClass="noPrintButton">
 
-                        <h:outputLabel value="From Date" />
+                        <h:outputLabel value="From Recipt No" />
                         <p:inputText id="frn" value="#{commonReport.fromReciptNo}" autocomplete="off" />
                         <p:spacer width="30" height="1"/>
-                        <h:outputLabel value="To Date"/>
+                        <h:outputLabel value="To Recipt No"/>
                         <p:inputText id="trn" value="#{commonReport.toReciptNo}" autocomplete="off"/>
 
                         <p:watermark for="frn" value="From Recipt No" />
