--- a/src/main/webapp/reportCashier/report_cashier_summery_all_total_only_by_reciptno.xhtml
+++ b/src/main/webapp/reportCashier/report_cashier_summery_all_total_only_by_reciptno.xhtml
@@ -43,10 +43,10 @@
                         <h:outputLabel style="float: right" value="Printed By : #{sessionController.loggedUser.webUserPerson.name} " />
                     </f:facet>
                     <h:panelGrid columns="5" style="min-width: 30%;" styleClass="noPrintButton">
-                        <h:outputLabel value="From Date" />
+                        <h:outputLabel value="From Recipt No" />
                         <p:inputText id="frn" value="#{commonReport.fromReciptNo}" />
                         <p:spacer width="30" height="1"/>
-                        <h:outputLabel value="To Date"/>
+                        <h:outputLabel value="To Recipt No"/>
                         <p:inputText id="trn" value="#{commonReport.toReciptNo}"  />
                         <p:watermark for="frn" value="From Recipt No" />
                         <p:watermark for="trn" value="To Recipt No" />
