--- a/src/main/webapp/reportCashier/report_cashier_summery_by_user_by_reciptno.xhtml
+++ b/src/main/webapp/reportCashier/report_cashier_summery_by_user_by_reciptno.xhtml
@@ -43,10 +43,10 @@
 
 
                         <h:panelGrid columns="6" styleClass="noPrintButton" >
-                            <h:outputLabel value="From Date"/>
+                            <h:outputLabel value="From Recipt No"/>
                             <p:inputText id="frn" value="#{commonReport.fromReciptNo}" />
 
-                            <h:outputLabel value="To Date"/>
+                            <h:outputLabel value="To Recipt No"/>
                             <p:inputText id="trn" value="#{commonReport.toReciptNo}" />
 
                             <h:outputLabel styleClass="noPrintButton" value="User Name"/>
