Signed-off-by: Ruhunu <ruhunuDump@gmail.com>

--- a/src/main/webapp/hr/hr_staff_paysheet_component_all_performace_allovance_percentatge.xhtml
+++ b/src/main/webapp/hr/hr_staff_paysheet_component_all_performace_allovance_percentatge.xhtml
@@ -256,7 +256,7 @@
                                 </f:facet>
                                 <h:outputLabel value="#{i.staff.person.nameWithTitle}"/>
                             </p:column>
-                            <p:column headerText="Value" >
+                            <p:column headerText="Value" sortBy="#{i.staffPaySheetComponentValue}" >
                                 <f:facet name="header">
                                     <h:outputLabel value="Value"  />
                                 </f:facet>
