--- a/src/main/webapp/resources/hr/pay_slip_2.xhtml
+++ b/src/main/webapp/resources/hr/pay_slip_2.xhtml
@@ -19,13 +19,13 @@
         <h:outputStylesheet library="css" name="paySheet.css" ></h:outputStylesheet>
         <div style="position: relative!important;
              /*padding-left: 0.5%!important;*/
-             height:14cm!important;
+             height:13.3cm!important;
              width:24cm!important; 
              /*             overflow:hidden!important; */
              font-family: Times New Roman!important; 
              font-size: 10px!important; 
-             margin:1px!important; 
-             padding: 1px!important;
+             /*margin:1px!important;*/ 
+             /*padding: 1px!important;*/
              /*             background-size: 100% auto!important;*/
              letter-spacing: 0px;
 
@@ -40,7 +40,7 @@
             <div style="font-size: 10px!important; font-family: Times New Roman!important; letter-spacing: 0px;">
 
                 <div style="font-size: 18px; font-weight: bold; text-decoration: underline; text-align: left;">
-                    <h:outputText value="Pay Slip"/><h:outputText value="#{cc.attrs.bill.staff.code}" style="position: absolute!important; padding-left: 79%;"/><br></br>
+                    <h:outputText value="Pay Slip"/><h:outputText value="#{cc.attrs.bill.staff.code}" style="position: absolute!important; padding-left: 74%;"/><br></br>
                     <h:outputText value="#{cc.attrs.bill.staff.workingDepartment.institution.name}" style="font-size: 15px;"/>
                 </div>
                 <div>
@@ -53,7 +53,7 @@
                                 <td style="width: 10px;">
                                     <h:outputLabel value=":"/>
                                 </td>
-                                <td style="text-align: right; width: 145px;">
+                                <td style="text-align: right; width: 130px;">
                                     <h:outputText value="#{cc.attrs.bill.salaryCycle.salaryToDate}" class="textAlignRight">
                                         <f:convertDateTime pattern="MMMM yyyy" ></f:convertDateTime> 
                                     </h:outputText>
@@ -326,7 +326,7 @@
 
                         </table>
                     </div>
-                    <div style="position: absolute!important; padding-left: 35%;">
+                    <div style="position: absolute!important; padding-left: 33%;">
                         <table style="font-size: 13px!important; letter-spacing: 0px; font-family: Times New Roman!important;">                    
                             <tr>
                                 <td style="text-align: left;">
@@ -335,7 +335,7 @@
                                 <td>
                                     <h:outputLabel value=":" />
                                 </td>
-                                <td style="text-align: right; width: 130px;">
+                                <td style="text-align: right; width: 110px;">
                                     <h:outputText value="#{cc.attrs.bill.overTimeValue}"> 
                                         <f:convertNumber pattern="0.00"></f:convertNumber>
                                     </h:outputText>
@@ -718,7 +718,7 @@
                             </tr>
                         </table>
                     </div>
-                    <div style="position: absolute!important;padding-left: 62%;">
+                    <div style="position: absolute!important;padding-left: 58%;">
                         <table style="font-size: 13px!important; letter-spacing: 0px; font-family: Times New Roman!important;">
                             <tr>
                                 <td style="width: 30px;">
@@ -783,7 +783,7 @@
                             
                         </table>
                     </div>
-                    <div style="position: absolute!important;padding-left: 63%;">
+                    <div style="position: absolute!important;padding-left: 59%;">
                         <table style="font-size: 13px!important; letter-spacing: 0px; font-family: Times New Roman!important;"> 
                             <tr>
                                 <td colspan="3" style="text-align: center; text-decoration: underline;">
