Petty cash bill no Signed-off-by: HNDITDushan <s.t.dushan@mail.com>

--- a/src/main/webapp/resources/bill/petty.xhtml
+++ b/src/main/webapp/resources/bill/petty.xhtml
@@ -115,7 +115,7 @@
                                                                 </h:outputLabel>
                                                             </td>
                                                              <td>
-                                                                 <h:outputLabel value="INVOICE NO :#{cc.attrs.bill.intInvoiceNumber}" style="text-align: right!important; font-size: 11px!important;"/>
+                                                                 <h:outputLabel value="INVOICE NO :#{cc.attrs.bill.invoiceNumber}" style="text-align: right!important; font-size: 11px!important;"/>
                                                             </td>
                                                         </tr>
                                                         <tr>
