Pharmacy Stock Histry Signed-off-by: HNDITDushan <s.t.dushan@gmail.com>

--- a/src/main/webapp/pharmacy/pharmacy_department_stock_history.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_department_stock_history.xhtml
@@ -59,7 +59,7 @@
                                              >
                                     <p:column headerText="History Availabe Days" >
                                         <p:outputLabel value="#{d}" >
-                                            <f:convertDateTime pattern="dd MMMM yyyy" ></f:convertDateTime>
+                                            <f:convertDateTime pattern="yyyy MMMM dd hh:mm:ss a " ></f:convertDateTime>
                                         </p:outputLabel>
                                     </p:column>
                                 </p:dataTable>
