--- a/src/main/webapp/resources/cashier/credit_letter.xhtml
+++ b/src/main/webapp/resources/cashier/credit_letter.xhtml
@@ -270,7 +270,7 @@
 
                     <tr>
                         <td>
-                            <h:outputLabel value="Yours' Fathfully,"/>
+                            <h:outputLabel value="Yours' Faithfully,"/>
                         </td>
                         <td></td>
                         <td></td>
