--- a/src/main/webapp/resources/hr/bank_letter.xhtml
+++ b/src/main/webapp/resources/hr/bank_letter.xhtml
@@ -208,7 +208,7 @@
 
                     <tr>
                         <td>
-                            <h:outputLabel value="Yours' Fathfully,"/>
+                            <h:outputLabel value="Yours' Faithfully,"/>
                         </td>
                         <td></td>
                         <td></td>
