pharmacy administrator (report glassfish output ) Signed-off-by: ravisarani <ravisaraniranawaka@gmail.com>

--- a/src/main/webapp/pharmacy/unit_report_by_item.xhtml
+++ b/src/main/webapp/pharmacy/unit_report_by_item.xhtml
@@ -42,7 +42,7 @@
                         </h:panelGrid>
 
 
-                        <p:commandButton ajax="false" value="Fillsfgsdgs" 
+                        <p:commandButton ajax="false" value="Fill" 
                                          action="#{reportsTransfer.fillItemCounts}" />
                         <p:commandButton value="Excel" ajax="false">
                             <pe:exporter type="xlsx" 
