--- a/src/main/webapp/channel/channel_shedule.xhtml
+++ b/src/main/webapp/channel/channel_shedule.xhtml
@@ -77,7 +77,7 @@
                         <p:outputLabel value="Id" rendered="#{sheduleController.current ne null}"/>
                         <p:outputLabel value="#{sheduleController.current.id}" rendered="#{sheduleController.current ne null}"/>
                         <p:outputLabel value="Session Name"/>
-                        <p:inputText autocomplete="off" value="#{sheduleController.current.name}"/>
+                        <p:inputText autocomplete="off" value="#{sheduleController.current.name}" disabled="#{sheduleController.current.id ne null and !webUserController.hasPrivilege('ChannellingChannelShedulName')}"/>
 
                         <h:outputText value="Institution" ></h:outputText>
                         <p:selectOneMenu id="cmbIns" value="#{sheduleController.current.institution}" >
@@ -213,7 +213,7 @@
                 </p:panel>
 
             </h:panelGrid>
-            <p:commandButton value="Update On-Call Fees" action="#{sheduleController.createOnCallFeeOldSession()}" rendered="false" ajax="false" />
+            <p:commandButton value="Update Fees" action="#{sheduleController.createOnCallFeeOldSession()}" rendered="#{webUserController.hasPrivilege('Developers')}"  ajax="false" />
         </h:form>
     </ui:define>
 
